# RL4QE

./: .env  .env_example  .gitignore  LICENSE  Makefile  README.md  evaluate.py  evaluate_r1.py  pyproject.toml  requirement.txt  test_model.py  train.py  train_lora.py  train_rq.py  train_rq1.py  train_rq1_2.py  train_rq2.py  train_rq3.py  train_rq3.sh
backup/: requirement.txt  train_rq1.py  train_rq2.py
dataset/: test.jsonl  train.json  train.jsonl  val.jsonl
docs/: dpo.md  note.md  reasoning.md
llm/: deepseek.py
models/: bart.py  prophetnet.py  qwen.py  qwen_full.py  qwen_lora.py  qwen_vllm.py  t5small.py  t5small_huggingface.py  t5small_modelscope.py
result/bleu/: metrics_20250407_150504.json  train_log_20250407_150504.jsonl
result/f1/: best_model_validation_results.json  train_log_20250408_014511.jsonl
result/full/: metrics_20250409_025053.json  train_log_20250409_025053.jsonl
result/logs_full/: dataset_info.json
result/logs_lora_16/: dataset_info.json  metrics_20250409_060325.json  train_log_20250409_060325.jsonl
result/logs_lora_r4/: dataset_info.json  metrics_20250409_035123.json  train_log_20250409_035123.jsonl
result/logs_lora_r8/: dataset_info.json  metrics_20250409_045045.json  train_log_20250409_045045.jsonl
result/overlap/: train_log_20250407_045600.jsonl
result/rouge/: train_log_20250407_135010.jsonl
testcase/: test_t5small.py
utils/: code_metric.py  reward_util.py
