[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RL4LLM"
version = "0.1.0"
description = "RL4LLM project"
requires-python = ">=3.7"
dependencies = [
    "torch",
    "transformers",
    "requests",
    "numpy",
    "openai",
    "python-dotenv"
]

[tool.hatch.metadata]
allow-direct-references = true