[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RL4LLM"
version = "0.1.0"
description = "RL4LLM project"
requires-python = ">=3.7"
dependencies = [
    "torch",
    "transformers",
    "requests",
    "numpy",
    "openai",
    "python-dotenv",
    "modelscope",
    "httpx[socks]",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "accelerate"
]

[tool.hatch.metadata]
allow-direct-references = true