[project]
name = "RL4QE"
version = "0.1.0"
description = "Reinforcement Learning for Query Enhancement"
requires-python = ">=3.8"

dependencies = [
    "torch",
    "requests",
    "numpy",
    "openai",
    "python-dotenv",
    "modelscope",
    "httpx[socks]",
    "accelerate",
    "tiktoken",
    "einops",
    "transformers_stream_generator",
    "vllm",
    "bitsandbytes",
    "peft>=0.8.0",
    "rouge",
    "nltk",
    "psutil",
    "optimum",
    "scipy",
    "protobuf"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["RL4QE"]